Fixed alignment issue with search bar button

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap");
 .body-section {
-  padding: 80px 0;
+  padding: 150px 0;
 }
