--- a/src/Components/SearchContainer/SearchContainer.css
+++ b/src/Components/SearchContainer/SearchContainer.css
@@ -47,6 +47,7 @@
   position: absolute;
   top: 37px;
   right: 43px;
+  text-align: center;
 }
 
 .search-container > .search-form > .text-search-button:hover {
